/* $Id: ChangeLog,v 1.1460 2001-05-30 17:43:08 sandervl Exp $ */

 2001-05-30: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o RedrawWindow: don't clear erase background flag if the 
                  window is already (partly) invalidated.
                  (fixes redrawing of dialogs controls in mIRC startup dialog 
                   window (when switching option windows))
    - KERNEL32: o Put back old lookup code. 
                  New files renamed to winimagepeldr_new.cpp/h
                  (Odin test app crashes; looks like MFC42 ordinal lookup
                   fails somewhere)
    - OLEAUT32: o Added RegisterTypeLib (ported recent Wine patch) &
                  UnRegisterTypeLib
                o Added ITypeInfoImpl_Invoke (ported Francois Jacques'
                  (refused) patch and rewrote it to get rid of stack
                  layout dependency.
                o VT_HRESULT -> VT_INT conversion added to Coerce
                  (all needed for Quicken Deluxe 2001; still crashes, but
                   gets passed data loading)

 2001-05-30: Patrick Haller <patrick.haller@innotek.de>
    - KERNEL32: o replaced linear lists in PE loader with faster hashtables
                  (ccollection.cpp, experimental)
                  ToDo: measure any difference, revert eventualls

 2001-05-29: Sander van Leeuwen <sandervl@xs4all.nl>
    - GDI32:    o Set/GetDIBColorTable fixes for DIB sections with bpp > 8
                o Don't sync DIB section in SelectPalette if bForceBackground
                  is -1. (hack for bitmap buttons in Beyond Compare)
    - DCIMAN32: o Updated & return proper error codes

 2001-05-28: Patrick Haller <patrick.haller@innotek.de>
    - GDI32:    o Split GDI32.CPP into ICM.CPP and GDI32.CPP
    		o CreateDC() accepts "display" instead of "DISPLAY"
                  (fixes font-not-found problem in ZD Bench 99)
    - KERNEL32: o mmap.cpp: slightly accelerated ::findMapByView()